--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en" ng-app="phonecatApp">
+<html lang="en" ng-app="sgsRecorder">
 <head>
   <meta charset="utf-8">
   <title>AngularJS</title>
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="css/app.css">
+  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-aria/angular-aria.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
@@ -12,7 +13,7 @@
   <script src="bower_components/angular-material/angular-material.js"></script>
   <script src="js/app.js"></script>
 </head>
-<body ng-controller="PhoneListCtrl">
+<body ng-controller="main">
 
 <div layout="column" layout-fill>
   <md-content>
@@ -24,41 +25,41 @@
     </md-toolbar>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
-          <md-button flex>杀</md-button>
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[0]}" layout="row" layout-align="center center">
+          <md-button ng-click="refresh(0)"  flex>杀</md-button>
           <span class="right" flex>{{card[0]}}/30<span>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
-          <md-button flex>闪</md-button>
-          <span class="right" flex>{{card[1]}}/30<span>
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[1]}" layout="row" layout-align="center center">
+          <md-button ng-click="refresh(1)" flex>闪</md-button>
+          <span class="right" flex>{{card[1]}}/24<span>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[2]}" layout="row" layout-align="center center">
           <md-button flex>桃</md-button>
-          <span class="right" flex>{{card[2]}}/30<span>
+          <span class="right" flex>{{card[2]}}/12<span>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[3]}" layout="row" layout-align="center center">
           <md-button flex>雷 杀</md-button>
-          <span class="right" flex>28/30<span>
+          <span class="right" flex>{{card[3]}}/9<span>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[4]}" layout="row" layout-align="center center">
           <md-button flex>火 杀</md-button>
-          <span class="right" flex>28/30<span>
+          <span class="right" flex>5/{{card[4]}}<span>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
-        <md-toolbar class="md-primary" layout="row" layout-align="center center">
+        <md-toolbar class="md-accent" ng-class="{'md-warn': !card[5]}" layout="row" layout-align="center center">
           <md-button flex>酒</md-button>
-          <span class="right" flex>28/30<span>
+          <span class="right" flex>{{card[5]}}/5<span>
         </md-toolbar>
       </md-whiteframe>
     </div>
