--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="sgsRecorder">
 <head>
   <meta charset="utf-8">
-  <title>AngularJS</title>
+  <title>三国杀记牌器</title>
   <link rel="stylesheet" href="bower_components/angular-material/angular-material.css">
   <link rel="stylesheet" href="css/app.css">
   <script src="bower_components/jquery/dist/jquery.js"></script>
