--- a/index.html
+++ b/index.html
@@ -26,40 +26,37 @@
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[0]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(0)"  flex>杀</md-button>
+          <md-button ng-click="refresh(0)"  flex>
+          杀
           <span class="right" flex>{{card[0]}}/30<span>
+          </md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[1]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(1)" flex>闪</md-button>
-          <span class="right" flex>{{card[1]}}/24<span>
+          <md-button ng-click="refresh(1)" flex>闪 <span class="right" flex>{{card[1]}}/24<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[2]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(2)" flex>桃</md-button>
-          <span class="right" flex>{{card[2]}}/12<span>
+          <md-button ng-click="refresh(2)" flex>桃<span class="right" flex>{{card[2]}}/12<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[3]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(3)" flex>雷 杀</md-button>
-          <span class="right" flex>{{card[3]}}/9<span>
+          <md-button ng-click="refresh(3)" flex>雷 杀<span class="right" flex>{{card[3]}}/9<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[4]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(4)" flex>火 杀</md-button>
-          <span class="right" flex>{{card[4]}}/5<span>
+          <md-button ng-click="refresh(4)" flex>火 杀<span class="right" flex>{{card[4]}}/5<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[5]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(5)" flex>酒</md-button>
-          <span class="right" flex>{{card[5]}}/5<span>
+          <md-button ng-click="refresh(5)" flex>酒<span class="right" flex>{{card[5]}}/5<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
@@ -72,100 +69,85 @@
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[6]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(6)" flex>决 斗</md-button>
-          <span class="right" flex>{{card[6]}}/3<span>
+          <md-button ng-click="refresh(6)" flex>决 斗<span class="right" flex>{{card[6]}}/3<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[7]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(7)" flex>过河拆桥</md-button>
-          <span class="right" flex>{{card[7]}}/6<span>
+          <md-button ng-click="refresh(7)" flex>过河拆桥<span class="right" flex>{{card[7]}}/6<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[8]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(8)" flex>顺手牵羊</md-button>
-          <span class="right" flex>{{card[8]}}/5<span>
+          <md-button ng-click="refresh(8)" flex>顺手牵羊<span class="right" flex>{{card[8]}}/5<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[9]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(9)" flex>万箭齐发</md-button>
-          <span class="right" flex>{{card[9]}}/1<span>
+          <md-button ng-click="refresh(9)" flex>万箭齐发<span class="right" flex>{{card[9]}}/1<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[10]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(10)" flex>南蛮入侵</md-button>
-          <span class="right" flex>{{card[10]}}/3<span>
+          <md-button ng-click="refresh(10)" flex>南蛮入侵<span class="right" flex>{{card[10]}}/3<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[11]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(11)" flex>桃园结义</md-button>
-          <span class="right" flex>{{card[11]}}/1<span>
+          <md-button ng-click="refresh(11)" flex>桃园结义<span class="right" flex>{{card[11]}}/1<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[12]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(12)" flex>无中生有</md-button>
-          <span class="right" flex>{{card[12]}}/4<span>
+          <md-button ng-click="refresh(12)" flex>无中生有<span class="right" flex>{{card[12]}}/4<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[13]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(13)" flex>五谷丰登</md-button>
-          <span class="right" flex>{{card[13]}}/2<span>
+          <md-button ng-click="refresh(13)" flex>五谷丰登<span class="right" flex>{{card[13]}}/2<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[14]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(14)" flex>借刀杀人</md-button>
-          <span class="right" flex>{{card[14]}}/2<span>
+          <md-button ng-click="refresh(14)" flex>借刀杀人<span class="right" flex>{{card[14]}}/2<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[15]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(15)" flex>乐不思蜀</md-button>
-          <span class="right" flex>{{card[15]}}/3<span>
+          <md-button ng-click="refresh(15)" flex>乐不思蜀<span class="right" flex>{{card[15]}}/3<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[16]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(16)" flex>闪 电</md-button>
-          <span class="right" flex>{{card[16]}}/2<span>
+          <md-button ng-click="refresh(16)" flex>闪 电<span class="right" flex>{{card[16]}}/2<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[17]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(17)" flex>无懈可击</md-button>
-          <span class="right" flex>{{card[17]}}/7<span>
+          <md-button ng-click="refresh(17)" flex>无懈可击<span class="right" flex>{{card[17]}}/7<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
     <div layout="row">
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[18]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(18)" flex>火 攻</md-button>
-          <span class="right" flex>{{card[18]}}/3<span>
+          <md-button ng-click="refresh(18)" flex>火 攻<span class="right" flex>{{card[18]}}/3<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[19]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(19)" flex>兵粮寸断</md-button>
-          <span class="right" flex>{{card[19]}}/2<span>
+          <md-button ng-click="refresh(19)" flex>兵粮寸断<span class="right" flex>{{card[19]}}/2<span></md-button>
         </md-toolbar>
       </md-whiteframe>
       <md-whiteframe class="md-whiteframe-z2" layout="row" layout-align="center center" flex>
         <md-toolbar class="md-accent" ng-class="{'md-warn': !card[20]}" layout="row" layout-align="center center">
-          <md-button ng-click="refresh(20)" flex>铁索连环</md-button>
-          <span class="right" flex>{{card[20]}}/6<span>
+          <md-button ng-click="refresh(20)" flex>铁索连环<span class="right" flex>{{card[20]}}/6<span></md-button>
         </md-toolbar>
       </md-whiteframe>
     </div>
